chart render issue IN-211 & auto refreshment api & table horizontal scroll in dashboard

--- a/src/app/components/workbench/sheetsdashboard/sheetsdashboard.component.scss
+++ b/src/app/components/workbench/sheetsdashboard/sheetsdashboard.component.scss
@@ -131,6 +131,7 @@ apx-chart {
 
 .scroll-overflow {
   overflow: scroll !important;
+  display: flex;
 }
 // gridster-item{
 //     overflow: scroll !important;
